test/mutation_analysis/s0925_long_pressed_name/hafis/ablation_o3_r50/mutants/21/result.txt
./test/mutation_analysis/s0925_long_pressed_name/hafis/ablation_o3_r50/mutants/21/Solution.java:19: error: unreachable statement
            while (false) {
                          ^
1 error
